# vmware-automation

./: .gitignore  DESCRIPTION  LICENSE  README.md  cidata.iso  cleanup.py  config.py  config.py.example  create-cidata-iso.py  create-vm.py  create_cidata_iso.py  create_vm.py  prepare_custom_iso.py  pyproject.toml  simple_clone.py
autoinstall/: meta-data  user-data  user-data-uefi
